--- a/aula014ex/ex017/modelo.html
+++ b/aula014ex/ex017/modelo.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            Testando...
+            <p>
+                Número: <input type="number" name="num" placeholder="Digite um número" id="txtn"> <input type="submit" value="Gerar Tabuada" onclick="tabuada()">
+            </p>
         </div>
         <div>
-            <span>
-                
-            </span>
+            <select name="Tabuada" size="10" id="selttab">
+                <option value="number">Digite um número</option>
+            </select>
         </div>
     </section>
     <footer>
